--- a/index.css
+++ b/index.css
@@ -96,7 +96,9 @@ a li:hover {
   background-color: #44567d;
   color: #dfebf6;
   text-align: center;
-  padding: 50px;
+  /* padding: 50px; */
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .container {
@@ -118,7 +120,59 @@ a li:hover {
   margin-bottom: 10px;
   color: orangered;
 }
-#services {
-  height: 100vh;
-  padding-top: 100px;
+
+.contact-section {
+  padding: 100px;
+  background-color: #dfebf6;
+}
+
+.contact-section h1 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: orangered;
+}
+
+.contact-section form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  width: 450px;
+  margin-bottom: 20px;
+  padding: 5px;
+}
+
+textarea {
+  width: 450px;
+}
+
+button {
+  margin-top: 40px;
+  padding: 10px;
+  background-color: #29353c;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
+
+.footer {
+  background-color: #29353c;
+  color: #dfebf6;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer p {
+  margin-bottom: 10px;
+}
+
+i {
+  margin-left: 5px;
+}
+a:hover {
+  color: red;
+  background-color:white;
 }
